<resources>

    <string name="app_name">Robot Control</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Robot Control</string>
    <string name="ip_field">Robot IP Address</string>
    <string name="connect">Connect</string>
    <string name="logo_description">Logo</string>
    <string name="camera_control">Camera Control</string>
    <string name="robot_control">Robot Control</string>
    <string name="lights_on">Lights</string>
    <string name="lights_off">Lights</string>
    <string name="settings">Connection Settings</string>
    <string name="ipaddress">IP Address:</string>
    <string name="websocketport">WebSocket Port:</string>
    <string name="cameraport">Camera Port:</string>
    <string name="save">Save Changes</string>
    <string name="btn_autonomy">Autonomy</string>

</resources>