<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:gravity="center|top"
    android:orientation="vertical"
    android:screenOrientation="portrait" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/logo_description"
            android:maxHeight="200dp"
            android:maxWidth="200dp"
            android:layout_marginTop="40dip"
            android:layout_marginBottom="40dip"
            android:src="@drawable/logo1" />

        <Button
            android:id="@+id/btn_connect"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/connect" />

        <Button
            android:id="@+id/btn_settings"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/settings" />

</LinearLayout>


